--- a/src/main/webapp/Consulta/Equipamento.xhtml
+++ b/src/main/webapp/Consulta/Equipamento.xhtml
@@ -34,7 +34,7 @@
 						update="tabela_equipamentos toolbar"
 						action="#{equipamentoBean.excluir}"
 						disabled="#{equipamentoBean.equipamentoSelecionado == null}"
-						onclick="if (!confirm('Deseja deletar este Equipamento ? ')) return false" />
+						onclick="if (!confirm('Deseja deletar o Equipamento  ? ')) return false" />
 
 				</p:toolbarGroup>
 			</p:toolbar>
