--- a/src/main/webapp/Consulta/Grupo.xhtml
+++ b/src/main/webapp/Consulta/Grupo.xhtml
@@ -14,7 +14,8 @@
 			<p:toolbar id="toolbar">
 				<p:toolbarGroup>
 					<p:commandButton value="Novo" icon="ui-icon-plus"
-						action="#{grupoBean.novo()}" process="@this" />
+						action="#{grupoBean.novo()}" process="@this"
+						disabled="#{not seguranca.acessoCadastroPermitido}"/>
 
 					<span class="ui-separator"> <span
 						class="ui-icon ui-icon-grip-dotted-vertical" />
@@ -22,7 +23,7 @@
 
 					<p:commandButton value="Editar" icon="ui-icon-pencil"
 						title="Editar" process="@this" action="#{grupoBean.edicao()}"
-						disabled="#{grupoBean.grupoSelecionado == null}" />
+						disabled="#{grupoBean.grupoSelecionado == null or not seguranca.acessoEdicaoPermitido}" />
 
 					<span class="ui-separator"> <span
 						class="ui-icon ui-icon-grip-dotted-vertical" />
@@ -31,7 +32,7 @@
 					<p:commandButton value="Excluir" icon="ui-icon-trash"
 						title="Excluir" process="@this" update="tabela_grupos toolbar"
 						action="#{grupoBean.excluir}"
-						disabled="#{grupoBean.grupoSelecionado == null}"
+						disabled="#{grupoBean.grupoSelecionado == null or not seguranca.acessoRemocaoPermitido}"
 						onclick="if (!confirm('Deseja deletar o Grupo #{grupoBean.grupoSelecionado.nome} ? ')) return false" />
 
 				</p:toolbarGroup>
