Edição de pessoa realizada com sucesso falta ver o editar do grupo

--- a/src/main/webapp/Consulta/Pessoa.xhtml
+++ b/src/main/webapp/Consulta/Pessoa.xhtml
@@ -14,7 +14,7 @@
 				<p:toolbarGroup>
 
 					<p:commandButton value="Novo" icon="ui-icon-plus"
-						action="#{pessoaBean.novo()}" process="@this"
+						action="#{pessoaBean.novo}" process="@this"
 						disabled="#{not seguranca.acessoCadastroPermitido}"/>
 
 					<span class="ui-separator"> <span
@@ -22,7 +22,7 @@
 					</span>
 
 					<p:commandButton value="Editar" icon="ui-icon-pencil"
-						title="Editar" process="@this" action="#{pessoaBean.edicao()}"
+						title="Editar" process="@this" action="#{pessoaBean.edicao}"
 						disabled="#{pessoaBean.pessoaSelecionada == null or not seguranca.acessoEdicaoPermitido}" />
 
 					<span class="ui-separator"> <span
