--- a/src/main/webapp/Edicao/PessoaEdicao.xhtml
+++ b/src/main/webapp/Edicao/PessoaEdicao.xhtml
@@ -3,7 +3,6 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:o="http://omnifaces.org/ui"
 	template="/WEB-INF/template/Layout.xhtml">
 
 <f:metadata>
@@ -37,6 +36,7 @@
 					
 					<p:outputLabel value="Grupo" for="grupo" />
 					<p:selectManyCheckbox id="grupo" value="#{pessoaBean.pessoa.grupos}" converter="grupoConverter" layout="responsive" columns="2">
+					<f:attribute name="collectionType" value="java.util.ArrayList"/>
         			<f:selectItems value="#{pessoaBean.listaGrupos}" var="grupos" itemValue="#{grupos}" itemLabel="#{grupos.nome}"/>
     				</p:selectManyCheckbox>					
 					
