--- a/src/main/webapp/Edicao/GrupoEdicao.xhtml
+++ b/src/main/webapp/Edicao/GrupoEdicao.xhtml
@@ -6,7 +6,7 @@
 	template="/WEB-INF/template/Layout.xhtml">
 
 	<f:metadata>
-		<f:viewParam name="codigo" value="#{grupoBean.grupo}" />
+		<f:viewParam name="codigo" converter="grupoConverter" value="#{grupoBean.grupo}" />
 	</f:metadata>
 
 	<ui:define name="content">
