Colocando descrição servidor nos equipamentos

--- a/src/main/webapp/Edicao/EquipamentoEdicao.xhtml
+++ b/src/main/webapp/Edicao/EquipamentoEdicao.xhtml
@@ -39,7 +39,8 @@
 						value="#{equipamentoBean.equipamento.descricao}" label="Tipo">
 						<f:selectItem itemLabel="Selecione o Tipo do Equipamento" noSelectionOption="true"  />
 						<f:selectItem itemLabel="Computador" itemValue="Computador" />
-						<f:selectItem itemLabel="Impressora" itemValue="Impressora" />	
+						<f:selectItem itemLabel="Impressora" itemValue="Impressora" />
+						<f:selectItem itemLabel="Servidor" itemValue="Servidor" />	
 					</p:selectOneMenu>
 					
 					<p:outputLabel value="Ip" for="ip" />
