--- a/src/main/webapp/site/Equipamento/Edicao/EquipamentoEdicao.xhtml
+++ b/src/main/webapp/site/Equipamento/Edicao/EquipamentoEdicao.xhtml
@@ -40,6 +40,7 @@
 						<f:selectItem itemLabel="Selecione o Tipo do Equipamento" noSelectionOption="true"  />
 						<f:selectItem itemLabel="Computador" itemValue="Computador" />
 						<f:selectItem itemLabel="Impressora" itemValue="Impressora" />
+						<f:selectItem itemLabel="Roteador" itemValue="Roteador" />
 						<f:selectItem itemLabel="Servidor" itemValue="Servidor" />	
 					</p:selectOneMenu>
 					
