Fazendo com que o administrador altera a senha de qualquer usuario

--- a/src/main/webapp/site/Pessoa/MudarSenha/MudarSenha.xhtml
+++ b/src/main/webapp/site/Pessoa/MudarSenha/MudarSenha.xhtml
@@ -12,7 +12,7 @@
 			
 			<p:toolbar>
 				<p:toolbarGroup>
-					<p:commandButton value="Editar" action="#{pessoaBean.alterarSenha()}"
+					<p:commandButton value="Editar" action="#{pessoaBean.alterarPropriaSenha()}"
 						process="@this capaPanel" />
 				</p:toolbarGroup>
 			</p:toolbar>
