--- a/src/main/webapp/site/Pessoa/Consulta/Pessoa.xhtml
+++ b/src/main/webapp/site/Pessoa/Consulta/Pessoa.xhtml
@@ -35,6 +35,15 @@
 						disabled="#{pessoaBean.pessoaSelecionada == null or not seguranca.acessoRemocaoPermitido}"
 						onclick="if (!confirm('Deseja deletar  #{pessoaBean.pessoaSelecionada.login} ? ')) return false" />
 
+					<span class="ui-separator"> <span
+						class="ui-icon ui-icon-grip-dotted-vertical" />
+					</span>
+
+					<p:commandButton value="Alterar Senha" icon="ui-icon-pencil"
+						title="Editar" process="@this" action="#{pessoaBean.alteracaoSenha}"
+						disabled="#{pessoaBean.pessoaSelecionada == null or not seguranca.acessoEdicaoPermitido}" />
+					
+
 				</p:toolbarGroup>
 			</p:toolbar>
 
