--- a/src/main/webapp/site/Equipamento/Consulta/Equipamento.xhtml
+++ b/src/main/webapp/site/Equipamento/Consulta/Equipamento.xhtml
@@ -66,7 +66,10 @@
 				rowClasses="cor-sim, cor-nao" columnClasses="nome"
 				emptyMessage="Nenhum Equipamento Cadastrado na Delegacia"
 				selection="#{equipamentoBean.equipamentoSelecionado}"
-				selectionMode="single" rowKey="#{equipamento.codigo}">
+				selectionMode="single" rowKey="#{equipamento.codigo}"
+				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				paginator="true" rows="10"
+				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
 
 				<p:ajax event="rowSelect" update=":frm:toolbar" />
 				<p:ajax event="rowUnselect" update=":frm:toolbar" />
