--- a/src/main/webapp/site/Equipamento/Consulta/Equipamento.xhtml
+++ b/src/main/webapp/site/Equipamento/Consulta/Equipamento.xhtml
@@ -69,13 +69,15 @@
 				selectionMode="single" rowKey="#{equipamento.codigo}"
 				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				paginator="true" rows="10"
-				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100">
+				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100,
+									105,110,115,120,125,130,135,140,145,150,155,160,165,170,175,180,185,190,195,200
+									205,210,215,220,225,230,235,240,245,250,255">
 
 				<p:ajax event="rowSelect" update=":frm:toolbar" />
 				<p:ajax event="rowUnselect" update=":frm:toolbar" />
 
 				<p:column filterBy="#{equipamento.nome}"
-					style="text-align: center; width:5%" filterMatchMode="startsWith">
+					style="text-align: center; width:5%" filterMatchMode="contains">
 					<f:facet name="header">
 						<h:outputText value="Nome" />
 					</f:facet>
@@ -91,7 +93,7 @@
 				</p:column>
 
 				<p:column filterBy="#{equipamento.ip}"
-					style="text-align: center; width:5%" filterMatchMode="startsWith">
+					style="text-align: center; width:5%" filterMatchMode="contains">
 					<f:facet name="header">
 						<h:outputText value="IP" />
 					</f:facet>
@@ -100,7 +102,7 @@
 
 
 				<p:column filterBy="#{equipamento.delegacia.nome}"
-					style="text-align: center; width:5%" filterMatchMode="startsWith">
+					style="text-align: center; width:5%" filterMatchMode="contains">
 					<f:facet name="header">
 						<h:outputText value="Delegacia" />
 					</f:facet>
