--- a/src/main/webapp/site/UnidadePolicial/Novo/UnidadePolicialNovo.xhtml
+++ b/src/main/webapp/site/UnidadePolicial/Novo/UnidadePolicialNovo.xhtml
@@ -12,7 +12,7 @@
 			
 			<p:toolbar>
 				<p:toolbarGroup>					
-					<p:commandButton value="Salvar" action="#{delegaciaBean.cadastrar()}"
+					<p:commandButton value="Salvar" action="#{unidadePolicialBean.cadastrar()}"
 						process="@this capaPanel" />
 				</p:toolbarGroup>
 			</p:toolbar>
@@ -26,7 +26,7 @@
 					columnClasses="ui-grid-col-2, ui-grid-col-4, ui-grid-col-2, ui-grid-col-4">
 				
 					<p:outputLabel value="Nome" for="nome" />
-					<p:inputText id="nome" value="#{delegaciaBean.delegacia.nome}" />
+					<p:inputText id="nome" value="#{unidadePolicialBean.unidadePolicial.nome}" />
 					
 				</p:panelGrid>
 			</div>		
